We are still facing this issue! "Timestamp" alignment is still not correct on "Signing" and "Signed" page with "Portrait" mode on "Android" device

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -882,3 +882,9 @@ table.responsive-table td:nth-child(1):before, table.responsive-table td:nth-chi
 .signature-wrapper .clearButton{
     top: -30% !important;
 }
+
+@media (orientation: landscape) {
+    table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
+        padding-right: 10% !important;
+    }
+  }
